# sdl-simple

./: CHANGELOG.md  LICENSE  default.nix  hie.yaml  sdl-simple.cabal  sdl-simple.nix  shell.nix
sdl-simple/SDL/: Simple.hs
snake/: Main.hs
