cabal-version:      2.4
name:               sdl-simple
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Markus Mayr
maintainer:         markus.mayr@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
build-type:         Simple

library
    exposed-modules:  SDL.Simple
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , lens
                    , linear
                    , mtl
                    , process
                    , sdl2
                    , sdl2-gfx
                    , sdl2-ttf
                    , text
                    , transformers
    hs-source-dirs:   sdl-simple
    default-language: Haskell2010

executable snake
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , random
                    , sdl-simple
                    , split
    hs-source-dirs:   snake
    default-language: Haskell2010
